# sst-template

./: Makefile.am  NOTICE  README.md  autogen.sh  configure.ac
config/: .gitignore  sst-check_picky.m4
src/: .gitignore
src/sst/: Makefile.am
src/sst/bksim/: Makefile.am
src/sst/fooprojbar/: Dummy.cc  Dummy.h  Makefile.am  dummy.py
